# MD-to-HTML

./: .gitignore  LICENSE  MCP_DEVELOPMENT_GUIDE.md  MCP_SUMMARY.md  MERMAID_AI_RULES.md  README.md  REFACTORING_SUMMARY.md  build_book.py  check_mermaid_content.py  cli.py  config.yaml  convert.py  debug_sequence.py  gui_app.py  main.html  main.py  mcp_config_example.json  mcp_server.py  pyproject.toml  requirements.txt  run_gui.bat  task.md  test.md  test_alternative_syntax.md  test_autofix.py  test_build.py  test_callouts.md  test_debug_mermaid.py  test_diagrams.md  test_embed_direct.py  test_lesson_097_original.md  test_lesson_108_original.md  test_mcp_integration.py  test_mermaid_fix.md  test_mermaid_minimal.md  test_minimal.md  test_mobile_breadcrumbs.html  test_real_lesson.py  test_render.md  test_sequence_create.md  (+4 more)
assets/: github-dark.theme
assets/css/: book_style.css  default.css  main.css  parallax.css
assets/js/: codeCopy.js  diff_highlight.js  main.js  main_modules.js  media.js  menu.js  pandoc_enhancements.js  parallax.js
assets/templates/: book.html  web.html
backup/: build_book.py  main.py  test_build.py
doc/: API.md  CLI_GUIDE.md  CONFIG.md  FONT_LICENSES.md  INSTALL.md  JS_ENHANCEMENTS.md  MCP_QUICKSTART.md  MCP_SERVER.md  QUICKSTART.md  README.md  report-08-12.md
doc/researchs/: Pandoc_ Конвертация Markdown с кодом и анимацией.md  (+1 more)
gui/: README.md  __init__.py  config_manager.py  main_window.py  widgets.py
md_converter/: __init__.py  config.py  converter.py
tests/: __init__.py  test_basic.py  test_links_and_media.py  test_media.py  test_mermaid_classdef.py  test_mermaid_classdiagram.py  test_mermaid_flowchart_styles.py  test_mermaid_multiple_subgraphs.py  test_mermaid_quotes.py  test_mermaid_sequence_create.py  test_mermaid_unit_integration.py
Переменные в JS/: Переменные в JS.html
(+43 files in other folders)
