[tool.poetry]
name = "md-to-html"
version = "0.1.0"
description = "Markdown to HTML converter with diff support"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
natsort = "^8.4.0"
PyYAML = "^6.0"
PyQt6 = "^6.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "<9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
