[project]
name = "md-to-html"
version = "0.1.0"
description = "Markdown to HTML converter with diff support"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "natsort>=8.4.0",
    "PyYAML>=6.0",
    "PyQt6>=6.6.0",
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest<9",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["md_converter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
